<resources>
	<string name="app_name">Point of Sale</string>
	<string name="main_activity_header"> Login</string>
	<string name="enter_your_email">Enter Your Email . . .</string>
	<string name="enter_your_password">Enter Your Password . . .</string>
	<string name="create_account_header">Create Account</string>
	<string name="forgot_password_question">Forgot Password?</string>
	<string name="title_activity_sign_up">Create Account</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="already_have_an_account">I Already have an Account!</string>
	<string name="forgot_password">Forgot Password</string>
	<string name="reset">Reset</string>
	<string name="remembered_password">I Remembered My Password!</string>
	<string name="create_account">Create</string>
	<string name="signing_in">Signing In . . .</string>
	<string name="custom_toast_text"> Unable to Instantiate toast.</string>
	<string name="signing_up">Signing Up . . .</string>
	<string name="resetting">Resetting . . .</string>
	<string name="employee_image_description">Image of the Employee</string>
	<string name="two_step_auth">2-Step Auth</string>
	<string name="recommended">Recommended</string>
	<string name="google_authenticator">Google</string>
	<string name="two_fa_hint">Input Code</string>
	<string name="verify">Verify</string>
	<string name="email_authenticator">Email</string>
	<string name="send_code">Send Code</string>
	<string name="verifying">Verifying . . .</string>
	<string name="sending">Sending . . .</string>
	<string name="resend_code">Resend Code</string>
	<string name="nothing_to_show">Nothing To Show Here!</string>
	<string name="by_dopesky">by Dopesky</string>
	<string name="employee_name">Employee Name</string>
	<string name="employee_department">Employee Department</string>
	<string name="employee_email">Employee Email</string>
	<string name="employee_status">Employee Status</string>
	<string name="last_interaction_time">Last Seen</string>
	<string name="profile_image">Profile Image</string>
	<string name="department_drawable">Department Drawable</string>
	<string name="loading">Loading . . .</string>
	<string name="default_transition_name">Default Transition Name</string>
	<string name="enter_first_name">Enter First Name</string>
	<string name="enter_last_name">Enter Last Name</string>
	<string name="enter_email_address">Enter Email Address</string>
	<string name="select_a_department">Select a Department</string>
	<string name="save">Save</string>
	<string name="saving">Saving . . .</string>
	<string name="adding">Adding . . .</string>
	<string name="product_name">Product Name</string>
	<string name="category_drawable">Category Drawable</string>
	<string name="product_category">Product Category</string>
	<string name="product_cost_drawable">Product Cost Drawable</string>
	<string name="product_cost">Product Cost</string>
	<string name="drawable">Drawable</string>
	<string name="last_modified">Last Modified</string>
	<string name="product_status">Product Status</string>
	<string name="select_a_category">Select a Category</string>
	<string name="enter_product_name">Enter Product Name</string>
	<string name="enter_product_cost">Enter Product Cost</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="products">Products</string>
	<string name="cart">Cart</string>
	<string name="manage">Manage</string>
	<string name="product_inventory">Product Inventory</string>
	<string name="product_turnover">Product Turnover</string>
	<string name="total_amount_after_discount">Total Amount(After Discount)</string>
	<string name="product_discount">Product Discount</string>
	<string name="product_amount">Product Quantity</string>
	<string name="remove">Remove</string>
	<string name="change">Update</string>
	<string name="add_to_cart">Add To Cart</string>
	<string name="product_quantity">Product Quantity</string>
	<string name="make_purchases">Make Purchases</string>
	<string name="x_to_close">×</string>
	<string name="cart_summary">Cart Summary</string>
	<string name="gross_cost">Gross Cost</string>
	<string name="total_discount">Discount</string>
	<string name="net_cost">Net Cost</string>
	<string name="purchasing">Purchasing . . .</string>
	<string name="checkout">Checkout</string>
	<string name="faw_sign_out_alt_checkout">{faw-sign-out-alt} Checkout</string>
	<string name="amount_paid">Amount Paid</string>
	<string name="balance">Balance</string>
	<string name="select_a_payment_method">Select a Payment Method</string>
	<string name="selling">Selling . . .</string>
	<string name="launcher_action">Launcher Action</string>
	<string name="point_of_sale_system_by_dopesky">😉 👨‍ Point of Sale System by Dopesky! 😊 💸</string>
	<string name="favicon_image">Favicon Image</string>
	<string name="launching">Launching 🚀</string>
	<string name="my_profile">My Profile</string>
	<string name="security">Security</string>
	<string name="miscelleneous">Miscellaneous</string>
	<string name="capture">Capture</string>
	<string name="company_name">Enter Company Name</string>
	<string name="uploading">Uploading . . .</string>
</resources>
