<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/margin_5rem"
	tools:context=".ui.auth.Launcher">
	<com.google.android.material.card.MaterialCardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:elevation="50dp"
		android:padding="@dimen/margin_3rem"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_margin="@dimen/margin_3rem"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/Widget.MaterialComponents.TextView"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
					android:text="@string/launching" />
			</LinearLayout>
			<ImageView
				android:id="@+id/loading_image"
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_gravity="center"
				android:layout_marginBottom="@dimen/margin_3rem"
				android:src="@drawable/favicon"
				android:scaleType="fitXY"
				android:contentDescription="@string/launcher_action"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="cursive"
				android:padding="@dimen/margin_3rem"
				android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
				android:layout_gravity="center_horizontal|bottom"
				android:text="@string/point_of_sale_system_by_dopesky"/>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
