<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ui.owner.AddProduct">
	<data>
		<import type="com.herokuapp.pointofsale.models.owner.Owner.DataBinder" />
		<variable name="ownerVM" type="DataBinder" />
	</data>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<android.support.v7.widget.Toolbar
				android:id="@+id/actual_toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorAccentText"
				android:theme="@style/AppTheme.AppBarOverlay"
				android:elevation="@dimen/margin_1rem"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"/>
			<ImageView
				android:id="@+id/profile_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minHeight="@dimen/image_height_default"
				android:contentDescription="@string/profile_image"
				android:transitionName="@string/default_transition_name"
				android:scaleType="centerCrop"
				android:src="@color/colorAccent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"/>
			<LinearLayout
				android:id="@+id/layout"
				android:alpha="0.0"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:showDividers="middle"
				android:divider="@drawable/spacing"
				android:padding="@dimen/margin_3rem"
				app:layout_constraintTop_toBottomOf="@id/profile_image"
				app:layout_constraintLeft_toLeftOf="parent">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<com.mikepenz.iconics.view.IconicsImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@string/department_drawable"
						android:scaleType="centerInside"
						app:iiv_icon="faw-shopping-bag"
						app:iiv_padding="@dimen/margin_2rem"
						app:iiv_size="@dimen/cardview_icon_size"
						app:iiv_color="@android:color/darker_gray"
						android:layout_gravity="center"/>
					<android.support.design.widget.TextInputLayout
						android:id="@+id/product_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:helperText="e.g Peanuts">
						<android.support.design.widget.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="textPersonName"
							android:text="@={ownerVM.productName}"
							android:hint="@string/enter_product_name"
							android:singleLine="true"
							android:layout_alignParentTop="true"
							android:layout_alignParentEnd="true"/>
					</android.support.design.widget.TextInputLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<com.mikepenz.iconics.view.IconicsImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@string/department_drawable"
						android:scaleType="centerInside"
						android:layout_gravity="center"
						app:iiv_icon="faw-money-bill-wave"
						app:iiv_padding="@dimen/margin_2rem"
						app:iiv_size="@dimen/cardview_icon_size"
						app:iiv_color="@android:color/darker_gray" />
					<android.support.design.widget.TextInputLayout
						android:id="@+id/cost_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:helperText="e.g 1200">
						<android.support.design.widget.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="numberDecimal"
							android:text="@={ownerVM.cost}"
							android:hint="@string/enter_product_cost"
							android:singleLine="true"
							android:layout_alignParentTop="true"
							android:layout_alignParentEnd="true"/>
					</android.support.design.widget.TextInputLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<com.mikepenz.iconics.view.IconicsImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@string/department_drawable"
						android:scaleType="centerInside"
						app:iiv_icon="faw-shopping-basket"
						app:iiv_padding="@dimen/margin_2rem"
						app:iiv_size="@dimen/cardview_icon_size"
						app:iiv_color="@android:color/darker_gray"
						android:layout_gravity="center_horizontal|bottom"/>
					<android.support.constraint.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
						<TextView
							android:id="@+id/textview"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/select_a_category"
							android:layout_marginStart="@dimen/margin_1rem"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintTop_toTopOf="parent"/>
						<Spinner
							android:alpha="0.0"
							android:id="@+id/spinner"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/Widget.AppCompat.Spinner.Underlined"
							android:paddingTop="@dimen/margin_0"
							android:paddingBottom="@dimen/margin_1rem"
							app:layout_constraintLeft_toLeftOf="parent"
							app:layout_constraintTop_toBottomOf="@id/textview"/>
					</android.support.constraint.ConstraintLayout>
				</LinearLayout>

				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<android.support.design.button.MaterialButton
						android:id="@+id/save_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/Widget.MaterialComponents.Button"
						android:layout_marginEnd="@dimen/margin_3rem"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						android:onClick="addProduct"
						android:text="@string/save"/>
				</android.support.constraint.ConstraintLayout>
			</LinearLayout>
		</android.support.constraint.ConstraintLayout>
	</ScrollView>
</layout>
