<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop = "@dimen/margin_1rem"
	android:layout_marginStart = "@dimen/margin_3rem"
	android:layout_marginEnd = "@dimen/margin_3rem"
	android:layout_marginBottom = "@dimen/margin_1rem">
	<com.google.android.material.card.MaterialCardView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:elevation="50dp"
		android:padding="@dimen/margin_0"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<LinearLayout
				android:id="@+id/product_title"
				android:layout_width="match_parent"
				android:padding="@dimen/margin_3rem"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<com.google.android.material.card.MaterialCardView
					android:layout_width="@dimen/circle_image_size"
					android:layout_height="@dimen/circle_image_size"
					android:layout_gravity="center"
					android:elevation="@dimen/margin_2rem"
					app:cardCornerRadius="25dp">
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent">
						<ImageView
							android:id="@+id/profile_image"
							android:contentDescription="@string/profile_image"
							android:layout_width="match_parent"
							android:layout_height="@dimen/circle_image_size"
							android:scaleType="centerCrop" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:transitionName="@string/default_transition_name"
							android:id="@+id/profile_letter"
							android:textAppearance="?android:attr/textAppearanceLarge"
							android:textColor="@android:color/white"
							android:gravity="center"
							android:layout_alignParentTop="true"
							android:layout_alignParentBottom="true"
							android:layout_alignParentStart="true"
							android:layout_alignParentEnd="true"/>
					</RelativeLayout>
				</com.google.android.material.card.MaterialCardView>
				<RelativeLayout
					android:layout_width="0dp"
					android:layout_weight="6"
					android:layout_height="wrap_content">
					<TextView
						android:id="@+id/product_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ellipsize="none"
						android:marqueeRepeatLimit="marquee_forever"
						android:singleLine="true"
						android:fadingEdge="horizontal"
						android:focusable="true"
						android:focusableInTouchMode="true"
						android:scrollHorizontally="true"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:textStyle="bold"
						android:layout_marginStart="@dimen/margin_3rem" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/product_name"
						style="?android:attr/textAppearanceSmall"
						android:layout_marginStart="@dimen/margin_3rem"
						android:layout_below="@id/product_name"/>
				</RelativeLayout>
				<com.google.android.material.button.MaterialButton
					android:id="@+id/show_more"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:rippleColor="@color/transparent"
					app:icon="@drawable/ic_keyboard_arrow_down_black_24dp"
					app:iconSize="34dp"
					app:iconTint="@color/blacksmoke"
					app:backgroundTint="@color/transparent"
					app:iconPadding="@dimen/margin_0"
					android:layout_marginEnd="@dimen/margin_2rem"
					android:layout_marginStart="@dimen/margin_2rem"
					android:layout_gravity="center"/>
			</LinearLayout>
			<HorizontalScrollView
				android:id="@+id/horizontal_scroll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/product_title">
				<net.cachapa.expandablelayout.ExpandableLayout
					android:id="@+id/expandable_layout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="@dimen/margin_3rem"
					app:el_expanded="false"
					app:el_duration="300"
					app:el_parallax="1.0">
					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:showDividers="middle"
						android:divider="@drawable/spacing"
						android:orientation="vertical">
						<androidx.constraintlayout.widget.ConstraintLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<com.mikepenz.iconics.view.IconicsImageView
								android:id="@+id/category_img"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/category_drawable"
								android:scaleType="centerInside"
								app:iiv_icon="faw-shopping-basket"
								app:iiv_padding="@dimen/margin_2rem"
								app:iiv_size="@dimen/cardview_icon_size"
								app:iiv_color="@android:color/darker_gray"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintLeft_toLeftOf="parent"/>
							<TextView
								android:id="@+id/product_category"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:layout_marginStart="@dimen/margin_3rem"
								style="?android:attr/textAppearanceMedium"
								android:textStyle="bold"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintLeft_toRightOf="@id/category_img"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="0"
								android:text="@string/product_category"
								style="?android:attr/textAppearanceSmall"
								android:layout_marginStart="@dimen/margin_3rem"
								app:layout_constraintTop_toBottomOf="@id/product_category"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintLeft_toRightOf="@id/category_img"/>
						</androidx.constraintlayout.widget.ConstraintLayout>

						<androidx.constraintlayout.widget.ConstraintLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<com.mikepenz.iconics.view.IconicsImageView
								android:id="@+id/cost_img"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/product_cost_drawable"
								android:scaleType="centerInside"
								app:iiv_icon="faw-money-bill-wave"
								app:iiv_padding="@dimen/margin_2rem"
								app:iiv_size="@dimen/cardview_icon_size"
								app:iiv_color="@android:color/darker_gray"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintLeft_toLeftOf="parent"/>
							<TextView
								android:id="@+id/product_cost"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								style="?android:attr/textAppearanceMedium"
								android:textStyle="bold"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintLeft_toRightOf="@id/cost_img"
								android:layout_marginStart="@dimen/margin_3rem"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="0"
								android:text="@string/product_cost"
								style="?android:attr/textAppearanceSmall"
								app:layout_constraintTop_toBottomOf="@id/product_cost"
								app:layout_constraintLeft_toRightOf="@id/cost_img"
								android:layout_marginStart="@dimen/margin_3rem"/>
						</androidx.constraintlayout.widget.ConstraintLayout>

						<androidx.constraintlayout.widget.ConstraintLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<com.mikepenz.iconics.view.IconicsImageView
								android:id="@+id/status_img"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/department_drawable"
								android:scaleType="centerInside"
								app:iiv_icon="faw-exclamation-circle"
								app:iiv_padding="@dimen/margin_2rem"
								app:iiv_size="@dimen/cardview_icon_size"
								app:iiv_color="@android:color/darker_gray"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintLeft_toLeftOf="parent"/>
							<TextView
								android:id="@+id/product_status"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:layout_marginStart="@dimen/margin_3rem"
								style="?android:attr/textAppearanceMedium"
								android:textStyle="bold"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintLeft_toRightOf="@id/status_img"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="0"
								android:text="@string/product_status"
								style="?android:attr/textAppearanceSmall"
								android:layout_marginStart="@dimen/margin_3rem"
								app:layout_constraintTop_toBottomOf="@id/product_status"
								app:layout_constraintLeft_toRightOf="@id/status_img"/>
						</androidx.constraintlayout.widget.ConstraintLayout>

						<androidx.constraintlayout.widget.ConstraintLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">
							<com.mikepenz.iconics.view.IconicsImageView
								android:id="@+id/time_img"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:contentDescription="@string/drawable"
								android:scaleType="centerInside"
								app:iiv_icon="faw-clock"
								app:iiv_padding="@dimen/margin_2rem"
								app:iiv_size="@dimen/cardview_icon_size"
								app:iiv_color="@android:color/darker_gray"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintLeft_toLeftOf="parent"/>
							<TextView
								android:id="@+id/product_time"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:layout_marginStart="@dimen/margin_3rem"
								style="?android:attr/textAppearanceMedium"
								android:textStyle="bold"
								app:layout_constraintTop_toTopOf="parent"
								app:layout_constraintLeft_toRightOf="@id/time_img"/>
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="0"
								android:text="@string/last_modified"
								style="?android:attr/textAppearanceSmall"
								android:layout_marginStart="@dimen/margin_3rem"
								app:layout_constraintTop_toBottomOf="@id/product_time"
								app:layout_constraintLeft_toRightOf="@id/time_img"/>
						</androidx.constraintlayout.widget.ConstraintLayout>
					</LinearLayout>
				</net.cachapa.expandablelayout.ExpandableLayout>
			</HorizontalScrollView>
		</RelativeLayout>
	</com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
